--- a/pilightTesting/src/main/res/values/dimens.xml
+++ b/pilightTesting/src/main/res/values/dimens.xml
@@ -33,6 +33,7 @@
 
     <!-- Card -->
     <dimen name="card_base_empty_height">72dp</dimen>
+    <dimen name="card_base_login_height">122dp</dimen>
 
     <!-- Grid -->
     <dimen name="carddemo_base_grid_columnwidth">140dp</dimen>
