--- a/pilightTesting/src/main/res/values/styles.xml
+++ b/pilightTesting/src/main/res/values/styles.xml
@@ -84,4 +84,9 @@
         <item name="android:disabledAlpha">?android:attr/disabledAlpha</item>
     </style>
 
+    <style name="ToggleButton.Pending" parent="@android:style/Widget.Holo.Light.Button.Toggle">
+        <item name="android:background">@drawable/toggle_pending_bg</item>
+        <item name="android:disabledAlpha">?android:attr/disabledAlpha</item>
+    </style>
+
 </resources>
