Visual improvements to PendingSwitchCard

--- a/pilightTesting/src/main/res/layout/pendingcard_inner.xml
+++ b/pilightTesting/src/main/res/layout/pendingcard_inner.xml
@@ -45,9 +45,11 @@
 
         <ProgressBar
             style="?android:attr/progressBarStyleSmall"
+            android:id="@+id/pbPending"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true"
+            android:visibility="gone"/>
 
         <ToggleButton
             android:id="@+id/card_inner_tb"
